[metadata]
name = leetcode_utils
version = 0.0.1
url = https://github.com/nick-konovalchuk/leetcode-utils
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:

[options.extras_require]
dev =
    pre-commit
    pytest

[bdist_wheel]
universal = True
